@@ -1,3 +1,10 @@
+2003-02-04  David Carlton  <carlton@math.stanford.edu>
+
+	* gdbtypes.h: Delete INTEGER_COERCION_BADNESS,
+	FLOAT_COERCION_BADNESS.
+	* gdbtypes.c (rank_one_type): Replace all uses of
+	INTEGER_COERCION_BADNESS by INTEGER_CONVERSION_BADNESS.
+
 2003-02-04  Jim Blandy  <jimb@redhat.com>
 
 	* dwarf2read.c (dwarf2_locate_sections): When we find a macro info
